--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
-  <app-heros></app-heros>
+  <router-outlet></router-outlet>
   <app-messages></app-messages>
 </div>
